[metadata]
name = cairocffi
url = https://github.com/Kozea/cairocffi
version = file: cairocffi/VERSION
license = BSD
license_file = LICENSE
description = cffi-based cairo bindings for Python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Simon Sapin
author_email = community@kozea.fr
platforms =
  Linux
  macOS
  Windows
keywords =
  cairo
  cffi
  binding
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Multimedia :: Graphics
project_urls =
  Documentation = https://cairocffi.readthedocs.io/
  Code = https://github.com/Kozea/cairocffi/
  Issue tracker = https://github.com/Kozea/cairocffi/issues
  Donation = https://www.patreon.com/kozea

[options]
packages = find:
setup_requires =
  cffi >= 1.1.0
  pytest-runner
  setuptools
install_requires =
  cffi >= 1.1.0
  setuptools >= 39.2.0
tests_require =
  pytest-cov
  pytest-flake8
  pytest-isort
  pytest-runner
python_requires = >= 3.5

[options.package_data]
cairocffi = VERSION

[options.packages.find]
exclude = cairocffi._generated

[options.extras_require]
doc =
  sphinx
  sphinx_rtd_theme
test =
  pytest-runner
  pytest-cov
  pytest-flake8
  pytest-isort
xcb =
  xcffib >= 0.3.2

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[aliases]
test = pytest

[tool:pytest]
addopts = --flake8 --isort
norecursedirs = build dist .cache .eggs .git

[flake8]
exclude =
  cairocffi/constants.py
  cairocffi/_generated/*.py

[isort]
default_section = THIRDPARTY
multi_line_output = 4

[coverage:report]
exclude_lines =
    pragma: no cover
    pytest.xfail()
    pytest.fail()
    except OSError:
    except ImportError:
    raise OSError
omit =
    .*

[coverage:run]
branch = True
include = cairocffi/*
